# cordelia-core

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.boot4  HLD.md  NETWORK-MODEL.md  README.md  REQUIREMENTS.md  SPEC.md  THREAT-MODEL.md  WHITEPAPER.md  boot1-config.toml  boot2-config.toml  boot3-config.toml  boot4-config.toml  config.toml.example  fly-boot1.toml  fly-boot2.toml  fly-boot3.toml  fly-boot4.toml  sonar-project.properties
.github/workflows/: ci.yml  codeql.yml  e2e.yml  encryption-e2e.yml  fly-deploy.yml  release.yml  resilience.yml
crates/cordelia-api/: Cargo.toml
crates/cordelia-api/src/: lib.rs
crates/cordelia-crypto/: Cargo.toml
crates/cordelia-crypto/src/: identity.rs  lib.rs
crates/cordelia-governor/: Cargo.toml
crates/cordelia-governor/src/: lib.rs
crates/cordelia-node/: Cargo.toml
crates/cordelia-node/src/: config.rs  external_addr.rs  governor_task.rs  lib.rs  main.rs  mini_protocols.rs  peer_pool.rs  quic_transport.rs  replication_task.rs  swarm_task.rs
crates/cordelia-node/tests/integration/: backpressure.rs  convergence.rs  harness.rs  main.rs  replication.rs
crates/cordelia-protocol/: Cargo.toml
crates/cordelia-protocol/src/: codec.rs  era.rs  lib.rs  messages.rs  tls.rs
crates/cordelia-replication/: Cargo.toml
crates/cordelia-replication/src/: engine.rs  lib.rs
crates/cordelia-storage/: Cargo.toml
crates/cordelia-storage/src/: lib.rs  schema_v4.sql  schema_v5.sql  schema_v6.sql  schema_v7.sql
docs/: DEPLOY-BOOT4.md  README.md  architecture-diagram.drawio  architecture-overview.md  enrollment-sequence.md
docs/architecture/: hld.md  overview.md  threat-model.md
docs/design/: R2-006-group-model.md  R3-decentralisation-pivot.md  R4-030-group-metadata-replication.md  R5-personal-groups.md  encryption-specification.md  game-theory.md  member-removal.md  memory-architecture.md  metadata-privacy.md  replication-routing.md
docs/guides/: group-lifecycle.md
docs/operations/: deploy.md
docs/reference/: api.md  config.md  protocol.md  requirements.md
scripts/: test-replication-e2e.sh  upgrade.sh
tests/e2e/: .gitignore  Dockerfile.orchestrator  Dockerfile.test  E2E-TESTING.md  README.md  ci-smoke-test.sh  encryption-e2e.sh  gen-compose-zoned.sh  monitor.sh  resilience-test.sh  smoke-test.sh  test-zoned-replication.sh  topology-350.env  topology-ci.env  topology-encryption.env  topology.env
tests/e2e/lib/: api.sh  graph.sh  proxy-api.sh  report.sh  wait.sh
tests/e2e/tests/: convergence.sh  personal-group-convergence.sh  replication.sh
