[package]
name = "cordelia-api"
version = "0.1.1"
edition = "2021"
description = "Local node HTTP/Unix socket API for Cordelia"

[dependencies]
cordelia-storage = { workspace = true }
cordelia-replication = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
