[package]
name = "cordelia-node"
version = "0.2.0"
edition = "2021"
description = "Cordelia P2P memory replication node"

[lib]
name = "cordelia_node"
path = "src/lib.rs"

[[bin]]
name = "cordelia-node"
path = "src/main.rs"

[dependencies]
cordelia-protocol = { workspace = true }
cordelia-governor = { workspace = true }
cordelia-replication = { workspace = true }
cordelia-storage = { workspace = true }
cordelia-crypto = { workspace = true }
cordelia-api = { workspace = true }
tokio = { workspace = true }
libp2p = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
base64 = { workspace = true }
