[package]
name = "cordelia-storage"
version = "0.1.1"
edition = "2021"
description = "SQLite storage layer for Cordelia P2P node"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
tempfile = "3"
